--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@ fixedElements: '.logo',
             $('#petition').ajaxForm({
                 target: '#petitionform',
                 success: function() {
-        $('#petitionform').append("<i class=\"fa fa-2x fa-check-square-o\"></i><h4>Thank you for signing the petition.</h4><p>Can you share this on Facebook and Twitter?</p>")
-.hide()
+        $('#petitionform').replaceWith("<i class=\"fa fa-2x fa-check-square-o\"></i><h4>Thank you for signing the petition.</h4><p>Can you share this on Facebook and Twitter?</p>")
       }
             });
 }
