--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ paddingBottom: '40px',
 fixedElements: '.logo',
 });
 
-          
+
 }
         });
 
@@ -203,7 +203,7 @@ $('input#submitButton').click( function() {
            <span class="hidden"><input type="text" name="denySubmit" id="denySubmit" value="" alt="This field is used to prevent form submission by scripts." />&nbsp;Please leave this field empty</span>
            <input type="hidden" name="SURVEY_ID" id="SURVEY_ID" value="4001" />
            <br />
-           <input type="submit" name="ACTION_SUBMIT_SURVEY_RESPONSE" id="ACTION_SUBMIT_SURVEY_RESPONSE" value="" class="button center-block newsletter_signup_button img-responsive" /><br />
+           <input type="submit" name="submitButton" id="submitButton" value="" class="button center-block newsletter_signup_button img-responsive" /><br />
          </form>
 </div>
 
