--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@ fixedElements: '.logo',
 
 $('input#submitButton').click(function() {
 preventDefault();
-var dataString = 'survey_id=4011&cons_first_name=' + f_name + '&cons_last_name=' + l_name + '&cons_email=' + email + '&cons_zip_code=' + zip + '&cons_birth_date' + dob;
+var dataString = '&cons_first_name=' + f_name + '&cons_last_name=' + l_name + '&cons_email=' + email + '&cons_zip_code=' + zip + '&cons_birth_date' + dob;
 //alert (dataString);return false;
 $.ajax({
   type: "POST",
   method: 'submitSurvey',
   v: '1.0',
   api_key: 'f74kbb8kl',
-  survey_id: '4001',
+  survey_id: '4011',
   url: "https://secure2.convio.net/txfree/site/CRSurveyAPI",
   data: dataString,
   success: function() {
