--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ preventDefault();
 var dataString = '&cons_first_name=' + f_name + '&cons_last_name=' + l_name + '&cons_email=' + email + '&cons_zip_code=' + zip + '&cons_birth_date' + dob;
 //alert (dataString);return false;
 $.ajax({
-  type: "POST",
+  type: 'POST',
   method: 'submitSurvey',
   v: '1.0',
   api_key: 'f74kbb8kl',
