--- a/index.html
+++ b/index.html
@@ -143,11 +143,7 @@ $.ajax({
 			'response_format': 'json',
 			'auth': '[[S86:true]]',
 			'cons_id': '[[S1:cons_id]]',
-			'cons_first_name': first_name,
-			'cons_last_name': last_name,
-			'cons_email': email,
-			'cons_zip_code': zip,
-			'birth_date': birthday,
+			'birth_date': dob,
 			'cons_info_component': zip,
 			'survey_id': '4001',
        }
