--- a/index.html
+++ b/index.html
@@ -122,8 +122,6 @@ css3: true,
 paddingBottom: '40px',
 fixedElements: '.logo',
 });
-
-
 }
         });
 
@@ -148,7 +146,7 @@ $.ajax({
 			'survey_id': '4001',
     },
   success: function() {
-     $('#petitionform').replaceWith("<i class=\"fa fa-2x fa-check-square-o\"></i><h4>Thank you for signing the petition.</h4><p>Can you share this on Facebook and Twitter?</p>")
+     $('#petitionform').innerHTML("<i class=\"fa fa-2x fa-check-square-o\"></i><h4>Thank you for signing the petition.</h4><p>Can you share this on Facebook and Twitter?</p>")
    },
  });
 });
