--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ $.ajax({
 			'cons_id': '[[S1:cons_id]]',
 			'birth_date': dob,
 			'cons_info_component': zip,
-			'survey_id': '4001',
+			'survey_id': '4001'
     },
   success: function() {
      $('#petitionform').innerHTML("<i class=\"fa fa-2x fa-check-square-o\"></i><h4>Thank you for signing the petition.</h4><p>Can you share this on Facebook and Twitter?</p>")
