--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ $.ajax({
   type: 'POST',
   url: "https://secure2.convio.net/txfree/site/CRSurveyAPI",
   datatype: 'json',
-  data: {dataString,
+  data: {
+    dataString,
     'method': 'submitSurvey',
 			api_key: 'f74kbb8kl',
 			'v': '1.0',
