--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ fixedElements: '.logo',
 
 
 
-$('#submitButton').submit(function(e) {
+$('#petition').submit(function(e) {
 e.preventDefault();
 	submitSurvey();
 });
