--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,9 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/reset.css" media="screen" rel="stylesheet" type="text/css">
     <link href="css/slickQuiz.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="css/master.css" media="screen" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -38,8 +40,6 @@
     </script>
   </head>
   <body id="slickQuiz">
-    <h1>h1 text</h1>
-    <p>body p</p>
     <h1 class="quizName"><!-- where the quiz name goes --></h1>
 
 <div class="quizArea">
