--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
     <script>
-      $(function () {
+      $(document).ready({
+        $(function () {
     $('#slickQuiz').slickQuiz({
         // options
         checkAnswerText: 'Check my answer';
@@ -33,9 +34,8 @@
         nameTemplateText;
         skipStartButton: true;
         preventUnanswered: true;
-
-
     });
+});
 });
     </script>
   </head>
