--- a/quiz.html
+++ b/quiz.html
@@ -23,8 +23,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
     <script>
-      $(document).ready({
-        $(function () {
+      $(document).ready(function() {
     $('#slickQuiz').slickQuiz({
         // options
         checkAnswerText: 'Check my answer';
@@ -35,7 +34,6 @@
         skipStartButton: true;
         preventUnanswered: true;
     });
-});
 });
     </script>
   </head>
