--- a/quiz.html
+++ b/quiz.html
@@ -26,12 +26,12 @@
       $(document).ready(function() {
     $('#slickQuiz').slickQuiz({
         // options
-        checkAnswerText: 'Check my answer';
-        nextQuestionText: 'Next question >>';
-        preventUnansweredText: 'Oops, you didn\'t select an answer!';
-        scoreTemplateText: '%score / %total';
-        skipStartButton: true;
-        preventUnanswered: true;
+        checkAnswerText: 'Check my answer',
+        nextQuestionText: 'Next question >>',
+        preventUnansweredText: 'Oops, you didn\'t select an answer!',
+        scoreTemplateText: '%score / %total',
+        skipStartButton: true,
+        preventUnanswered: true
     });
 });
     </script>
