--- a/quiz.html
+++ b/quiz.html
@@ -22,7 +22,19 @@
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
-    
+    <script>
+      $(document).ready(function() {
+    $('#slickQuiz').slickQuiz({
+        // options
+        checkAnswerText: 'Check my answer',
+        nextQuestionText: 'Next question >>',
+        preventUnansweredText: 'Oops, you didn\'t select an answer!',
+        scoreTemplateText: '%score / %total',
+        skipStartButton: true,
+        preventUnanswered: true
+    });
+});
+    </script>
   </head>
   <body id="slickQuiz">
     <h1 class="quizName"><!-- where the quiz name goes --></h1>
@@ -50,7 +62,7 @@
 <script src="js/jquery.js"></script>
 <script src="js/slickQuiz-config.js"></script>
 <script src="js/slickQuiz.js"></script>
-<script src="js/master.js"></script>
+<!-- <script src="js/master.js"></script> -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
