--- a/something.html
+++ b/something.html
@@ -31,7 +31,20 @@
     <![endif]-->
     <!--[if gte IE 9]><!-->
       <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-    <!--<![endif]-->
+      <!--<![endif]-->
+      <script src="js/luminateExtend.js"></script>
+      <script src="js/luminateExtend-examples.js"></script>
+      <script>
+      $(function() {
+  luminateExtend.init({
+    apiKey: 'f74kbb8kl',
+    path: {
+      nonsecure: 'http://www.tfn.org/site/',
+      secure: 'https://secure2.convio.net/txfree/site/'
+    }
+  });
+});
+</script>
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -321,7 +334,5 @@
 
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
-    <script src="js/luminateExtend.js"></script>
-    <script src="js/luminateExtend-examples.js"></script>
   </body>
 </html>
