--- a/donate.html
+++ b/donate.html
@@ -102,7 +102,7 @@
                   </label>
                 </div>
                 <div class="input-group" id="other-amount-input-group">
-                  <span class="input-group-addon">$</span><input type="text" class="form-control" id="other-amount" name="other_amount" disabled>
+                  <span class="input-group-addon">$</span><input type="text" class="form-control" id="other-amount" name="other_amount" >
                 </div>
               </div>
             </div>
