--- a/donate.html
+++ b/donate.html
@@ -316,7 +316,7 @@
 
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
-<!--    <script src="js/luminateExtend.js"></script> -->
+ <script src="js/luminateExtend.js"></script>
     <script src="js/luminateExtend-examples.js"></script>
   </body>
 </html>
