--- a/book.html
+++ b/book.html
@@ -45,7 +45,7 @@ html, body {
     display:table-cell;
     position:relative;
     vertical-align:middle;
-    text-align:center;
+    text-align:left;
 }
 
 
@@ -170,9 +170,12 @@ backgroundResize();
   <body>
 
 <!-- <div class="fullscreen background" style="background-image:url('images/full-bg.png');" data-img-width="1400" data-img-height="1072"> -->
+<div class="container">
+  <div class="row">
+    <div class="col-xs-offset-1 col-xs-10"
     <div class="content-a">
         <div class="content-b">
-            <p style="font-size: 30px; font-family: Georgia; color: #58504d; overflow: hidden;">Moses & America: <br />What <em>didn't</em> he do?</p>
+            <p style="font-size: 30px; font-family: Georgia; color: #58504d; overflow: hidden; text-align: center !important;">Moses & America: <br />What <em>didn't</em> he do?</p>
             <p>We talk a lot about historical American figures like George Washington, Thomas Jefferson, and Ben Franklin &mdash; but what about the most influential of them all?<br /> That's right, we're talking about <strong>Moses</strong> - the leader of the Israelites and newest Founding Father.</p>
             <p>
 The role that Moses played in religious history is undeniable: he is considered the author of the Torah, and led the exodus of the Israelites. One place his impact is not clear is in the foundational history and government of the United States. </p>
@@ -202,7 +205,11 @@ The SBOE isn’t about to change its tune on the influence of Moses, regardless 
           </div>
           <br />
 
+</div>
+</div>
         </div>
+      </div>
+
     <!-- </div> -->
 
 
