--- a/book.html
+++ b/book.html
@@ -176,17 +176,17 @@ backgroundResize();
     <div class="content-a">
         <div class="content-b">
             <p style="font-size: 30px; font-family: Georgia; color: #58504d; overflow: hidden; text-align: center !important;">Moses & America: <br />What <em>didn't</em> he do?</p>
-            <p>We talk a lot about historical American figures like George Washington, Thomas Jefferson, and Ben Franklin &mdash; but what about the most influential of them all?<br /> That's right, we're talking about <strong>Moses</strong> - the leader of the Israelites and newest Founding Father.</p>
+            <p>We talk a lot about historical American figures like George Washington, Thomas Jefferson, and Ben Franklin &mdash; but what about the most influential of them all?<br /> That's right, we're talking about <strong>Moses</strong> &mdash; the leader of the Israelites and newest Founding Father, <em>according to the Texas State Board of Education</em>.</p>
             <p>
 The role that Moses played in religious history is undeniable: he is considered the author of the Torah, and led the exodus of the Israelites. One place his impact is not clear is in the foundational history and government of the United States. </p>
-<p style="font-size: 1.1em;"><strong>But if you ask the right wing members of the Texas State Board of Education, all of the above is true - and it could soon be taught in social studies textbooks across the state and nation.</strong></p>
+<p style="font-size: 1.1em;"><strong>But if you ask the right wing members of the SBOE, all of the above is true &mdash; and it could soon be taught in social studies textbooks across the state and nation.</strong></p>
 <p>
 One government textbook tells students that the roots of democratic government in America date back “thousands of years to Old Testament texts and Biblical figures such as Moses and Solomon.” Scholars say this claim is nonsense. But right-wing politicians on the State Board of Education have insisted that the new textbooks include this wildly distorted version of history.</p>
 <p>
-The SBOE isn’t about to change its tune on the influence of Moses, regardless of how historically inaccurate that claim is. But textbook publishers have the power to present US history and government in a way that is free of partisan bias or overt religious insertions by providing revised textbooks to the SBOE before its final vote on Nov. 17. </p>
+The SBOE isn’t about to change its tune on the influence of Moses, regardless of how historically inaccurate their claims are. But textbook publishers have the power to present US history and government in a way that is free of partisan bias or overt religious insertions by providing revised textbooks to the SBOE before its final vote on Nov. 17. </p>
 <div class="quote-container">
 <blockquote class="note yellow">
-  Tell the publishers: Moses does belong in the Bible, but not in US government and history textbooks.
+  Tell the publishers: Remove the exaggerated influences of Moses in US government and history textbooks.
  <form method="POST" action="" style="" name="petition" id="petition" class="text-center center-block">
            <input type="hidden" name="cons_info_component" id="cons_info_component" value="t" />
            <input type="text" name="cons_first_name" id="cons_first_name"  maxlength="50" value="First name" onFocus="if(this.value == 'First name') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'First name';}" style="margin-bottom: 3px;" class="center-block" />
