--- a/book.html
+++ b/book.html
@@ -24,6 +24,11 @@ html, body {
     /* give this to all tags from html to .fullscreen */
     height:100%;
 }
+
+p {
+  font-family: Charter;
+}
+
 .fullscreen,
 .content-a {
     width:100%;
@@ -178,7 +183,7 @@ backgroundResize();
             <p style="font-size: 30px; font-family: Georgia; color: #58504d; overflow: hidden; text-align: center !important;">Moses & America: <br />What <em>didn't</em> he do?</p>
             <p>In school, we all learned about America's founders like George Washington, Thomas Jefferson, and Ben Franklin &mdash; but what about the most influential of them all? According to the Texas State Board of Education, students should also be learning about <strong>Moses</strong>.</p>
 
-<p style="font-size: 1.1em;"><strong>You read that right &mdash; and Moses could soon be featured in American government textboks across Texas and the nation.</strong></p>
+<p style="font-size: 1.1em;"><strong>You read that right &mdash; and Moses could soon be featured in American government textbooks across Texas and the nation.</strong></p>
 <p>
 One government textbook proposed in Texas this year tells students that the roots of democratic government in America date back “thousands of years to Old Testament texts and Biblical figures such as Moses and Solomon.” Scholars say this claim is nonsense. But right-wing politicians on the State Board of Education have insisted that the new textbooks include this wildly distorted version of history.</p>
 <p>
