--- a/base.html
+++ b/base.html
@@ -16,7 +16,9 @@
 
     <!-- Custom CSS -->
     <style>
-   
+   #regbox {
+    margin: 50px auto;
+   }
     </style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -34,8 +36,8 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-12 text-center">
-                <h1>A Bootstrap Starter Template</h1>
+            <div class="col-md-offset-3 col-md-3">
+                <h1>Register for Jan 27 Lobby Day</h1>
                 <p class="lead">Complete with pre-defined file paths that you won't have to change!</p>
                 <ul class="list-unstyled">
                     <li>Bootstrap v3.3.1</li>
