--- a/base.html
+++ b/base.html
@@ -19,6 +19,10 @@
    #regbox {
     margin: 50px auto;
    }
+   .box {
+    border: 1px;
+    background-color: #e5e5e5;
+   }
     </style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -36,7 +40,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-md-offset-3 col-md-3">
+            <div class="col-md-offset-3 col-md-3 box">
                 <h1>Register for Jan 27 Lobby Day</h1>
                 <p class="lead">Complete with pre-defined file paths that you won't have to change!</p>
                 <ul class="list-unstyled">
