--- a/townhallaction.html
+++ b/townhallaction.html
@@ -32,6 +32,13 @@ color: #fff;
 #partners p {
   color: #fff;
 }
+html {
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 0;
+  padding-right: 0;
+}
+
        </style>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
