--- a/townhallaction.html
+++ b/townhallaction.html
@@ -22,11 +22,12 @@
        body {
         font-family: 'Open Sans';
         font-size: 12pt;
-          margin-left: 0;
-        margin-right: 0;
-        padding-left: 0;
-        padding-right: 0;
-       }
+      }
+
+.row.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+}
        #partners a {
 padding-left: 5px;
 text-indent: -5px;
@@ -35,9 +36,6 @@ color: #fff;
 }
 #partners p {
   color: #fff;
-}
-html {
-
 }
 
        </style>
@@ -61,7 +59,7 @@ html {
     <div class="row">
       <div class="col-xs-12"></div>
     </div>
-    <div class='row' style="background-color: #F15A29;">      
+    <div class='row no gutters' style="background-color: #F15A29;">      
       <div class="col-md-5" style="margin-left: 15px; margin-right: 15px; border: 2px solid #B72B21; border-radius: 1px; margin: 8px; padding: 5px 5px 5px 10px;">
               <h3 class="" style="color: #fff;">BE READY</h3>
 
