--- a/townhallaction.html
+++ b/townhallaction.html
@@ -59,7 +59,7 @@ color: #fff;
     <div class="row">
       <div class="col-xs-12"></div>
     </div>
-    <div class='row no gutters' style="background-color: #F15A29;">      
+    <div class='row no-gutters' style="background-color: #F15A29;">      
       <div class="col-md-5" style="margin-left: 15px; margin-right: 15px; border: 2px solid #B72B21; border-radius: 1px; margin: 8px; padding: 5px 5px 5px 10px;">
               <h3 class="" style="color: #fff;">BE READY</h3>
 
