--- a/townhallaction.html
+++ b/townhallaction.html
@@ -54,8 +54,8 @@ color: #fff;
 
   </head>
   <body>
-   <div class="container">
-   <section class="container">
+   <div class="container-fluid">
+   <section class="container-fluid">
     <div class="row">
       <div class="col-xs-12"></div>
     </div>
