--- a/townhallaction.html
+++ b/townhallaction.html
@@ -55,7 +55,7 @@ color: #fff;
   </head>
   <body>
    <div class="container-fluid">
-   <section class="container-fluid">
+   <section >
     <div class="row">
       <div class="col-xs-12"></div>
     </div>
