--- a/townhallaction.html
+++ b/townhallaction.html
@@ -24,10 +24,7 @@
         font-size: 12pt;
       }
 
-.row.no-gutters {
-  margin-right: 0;
-  margin-left: 0;
-}
+
        #partners a {
 padding-left: 5px;
 text-indent: -5px;
@@ -55,8 +52,7 @@ color: #fff;
   </head>
   <body>
    <div class="container-fluid">
-   <section>
-    <div class='row no-gutters' style="background-color: #F15A29;">      
+    <div class="row" style="background-color: #F15A29;">      
       <div class="col-md-6" style="margin-left: 15px; margin-right: 15px; border: 2px solid #B72B21; border-radius: 1px; margin: 8px; padding: 5px 5px 5px 10px;">
               <h3 class="" style="color: #fff;">BE READY</h3>
 
@@ -101,7 +97,6 @@ color: #fff;
 
       </div>
     </div>
-  </section>
 </div>
 
       <!-- <script type="javascript">
