--- a/townhallaction.html
+++ b/townhallaction.html
@@ -24,17 +24,6 @@
         font-size: 12pt;
       }
 
-
-       #partners a {
-padding-left: 5px;
-text-indent: -5px;
-display: inline-block;
-color: #fff;
-}
-#partners p {
-  color: #fff;
-}
-
        </style>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -53,11 +42,11 @@ color: #fff;
   <body>
    <div class="container-fluid">
     <div class="row" style="background-color: #F15A29;">      
-      <div class="col-md-6" style="margin-left: 15px; margin-right: 15px; border: 2px solid #B72B21; border-radius: 1px; margin: 8px; padding: 5px 5px 5px 10px;">
+      <div class="col-md-6" style="border: 2px solid #B72B21; border-radius: 1px; margin: 8px; padding: 5px 5px 5px 10px;">
               <h3 class="" style="color: #fff;">BE READY</h3>
 
         <div id="regform">
-              <form class="luminateApi survey-form" method="POST" action="http://txfree.convio.net/site/CRSurveyAPI" data-luminateApi='{"callback": "submitSurveyCallback", "requiresAuth": "true"}'>
+          <form class="luminateApi survey-form" method="POST" action="http://txfree.convio.net/site/CRSurveyAPI" data-luminateApi='{"callback": "submitSurveyCallback", "requiresAuth": "true"}'>
           <input type="hidden" name="method" value="submitSurvey">
 
               <input type="hidden" name="cons_info_component" id="cons_info_component" value="t" />
@@ -85,7 +74,7 @@ color: #fff;
               <div class="form-group row text-center">
                 <button class="btn btn-md btn-info center-block" type="submit" />Add your name</button>
               </div>
-              </form>    
+          </form>    
         </div>
        </div>
     
@@ -94,8 +83,8 @@ color: #fff;
         <p style="color: #fff;">
           This is important - be part of the solution.
         </p>
-
       </div>
+
     </div>
 </div>
 
