--- a/townhallaction.html
+++ b/townhallaction.html
@@ -22,6 +22,8 @@
        body {
         font-family: 'Open Sans';
         font-size: 12pt;
+        width: 100%;
+       margin: 0%;    
       }
 
        </style>
