--- a/townhallaction.html
+++ b/townhallaction.html
@@ -22,6 +22,7 @@
        body {
         font-family: 'Open Sans';
         font-size: 12pt;
+        height: 100%;
         width: 100%;
        margin: 0%;    
       }
