--- a/townhallaction.html
+++ b/townhallaction.html
@@ -22,7 +22,6 @@
        body {
         font-family: 'Open Sans';
         font-size: 12pt;
-        height: 100%;
         width: 100%;
        margin: 0%;    
       }
@@ -44,7 +43,7 @@
   </head>
   <body>
    <div class="container-fluid">
-    <div class="row" style="background-color: #F15A29;">      
+    <div class="row" style="background-color: #F15A29; height: 100%;">      
       <div class="col-md-6" style="border: 2px solid #B72B21; border-radius: 1px; margin: 8px; padding: 5px 5px 5px 10px;">
               <h3 class="" style="color: #fff;">BE READY</h3>
 
