--- a/townhallaction.html
+++ b/townhallaction.html
@@ -43,9 +43,9 @@
   </head>
   <body>
    <div class="container-fluid">
-    <div class="row" style="background-color: #F15A29; height: 100%;">      
+    <div class="row" style="background-color: #F15A29;">      
       <div class="col-md-6" style="border: 2px solid #B72B21; border-radius: 1px; margin: 8px; padding: 5px 5px 5px 10px;">
-              <h3 class="" style="color: #fff;">BE READY</h3>
+              <h3 class="" style="color: #fff;">BE READY - join the Rapid Response team.</h3>
 
         <div id="regform">
           <form class="luminateApi survey-form" method="POST" action="http://txfree.convio.net/site/CRSurveyAPI" data-luminateApi='{"callback": "submitSurveyCallback", "requiresAuth": "true"}'>
@@ -83,7 +83,7 @@
        <div class="col-md-6">
         <h3 class="" style="color: #fff;">SIGN UP NOW</h3>
         <p style="color: #fff;">
-          This is important - be part of the solution.
+          Still months away from the 2017 Texas legislative session, politicians are already attacking abortion access from new angles. We need to let them know that whenever they make a move, we'll show up and get loud.
         </p>
       </div>
 
