--- a/townhallaction.html
+++ b/townhallaction.html
@@ -44,7 +44,7 @@
   <body>
    <div class="container-fluid">
     <div class="row" style="background-color: #F15A29;">      
-      <div class="col-md-6" style="border: 2px solid #B72B21; border-radius: 1px; margin: 8px; padding: 5px 5px 5px 10px;">
+      <div class="col-xs-offset-2 col-xs-8 col-md-6" style="border: 2px solid #B72B21; border-radius: 1px; margin: 8px; padding: 5px 5px 5px 10px;">
               <h3 class="" style="color: #fff;">BE READY - join the Rapid Response team.</h3>
 
         <div id="regform">
@@ -80,10 +80,10 @@
         </div>
        </div>
     
-       <div class="col-md-6">
+       <div class="col-xs-offset-2 col-xs-8 col-md-6">
         <h3 class="" style="color: #fff;">SIGN UP NOW</h3>
         <p style="color: #fff;">
-          Still months away from the 2017 Texas legislative session, politicians are already attacking abortion access from new angles. We need to let them know that whenever they make a move, we'll show up and get loud.
+          Still months away from the 2017 Texas legislative session, politicians are already attacking abortion access from new angles. The Rapid Response team will let them know that whenever they move to restrict or regulate abortion, we'll be there and be loud.
         </p>
       </div>
 
